data/derived/comb/progs/unify/prog2246.ml.out
Characters 99-118:
  | _ -> helper (f::acc) f x-1
         ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
